Micro Services App
Now is app is running in microservices archotecture

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# Service URLs
+AUTH_SERVICE_URL=http://auth-service:8001
+NOTES_SERVICE_URL=http://notes-service:8002
+
 # Azure MySQL Configuration
 DATABASE_URL=mysql+mysqlconnector://kpadmin:p1Kistan0978^@python-dbserver.mysql.database.azure.com:3306/pyth-micros-db?ssl_ca=backend/ssl/DigiCertGlobalRootCA.crt.pem
 
