Testing CI to push feature..branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Python CI
 on:
   push:
   
-    branches:
-      - features-changes-1 
+    branches: [feature-changes-1]
       
   pull_request:
     branches: [ main ]
