--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,5 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
     - name: Run tests (if any)
-      working-directory: ${{ matrix.service }}
       run: |
-        pytest || echo "No tests found in ${{ matrix.service }}"
+        pytest
