--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [api-gateway, auth-service, notes-service, frontend]
+        service: [api-gateway, notes-service, frontend, user-service]
 
     steps:
     - name: Checkout code
