--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,6 @@ jobs:
     - name: Run tests (if any)
       working-directory: ${{ matrix.service }}
       run: |
+        export PYTHONPATH=.
         pytest || echo "No tests found in ${{ matrix.service }}"
+
