--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,9 @@ jobs:
       working-directory: ${{ matrix.service }}
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-
+    - name: Set fake DATABASE_URL
+      run: echo "DATABASE_URL=sqlite:///./test.db" >> $GITHUB_ENV
+       
     - name: Run tests (if any)
       working-directory: ${{ matrix.service }}
       run: |
