--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [api-gateway, auth-service, notes-service, frontend]
+        service: [api-gateway, notes-service, frontend, user-service]
 
     steps:
     - name: Checkout code
@@ -37,12 +37,9 @@ jobs:
       working-directory: ${{ matrix.service }}
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    - name: Set fake DATABASE_URL
-      run: echo "DATABASE_URL=sqlite:///./test.db" >> $GITHUB_ENV
-       
+
     - name: Run tests (if any)
       working-directory: ${{ matrix.service }}
       run: |
         export PYTHONPATH=.
         pytest || echo "No tests found in ${{ matrix.service }}"
-
