--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest flake8 pytest-cov
+        pip install pytest flake8 pytest-cov autopep8  # Install autopep8
+
+    - name: Auto format with autopep8
+      working-directory: ${{ matrix.service }}
+      run: |
+        autopep8 --in-place --aggressive --aggressive .  # Auto format your code
 
     - name: Run flake8 (basic lint)
       working-directory: ${{ matrix.service }}
@@ -43,7 +48,7 @@ jobs:
       run: |
         export PYTHONPATH=.
         pytest --cov=. --cov-report=xml || exit 1
-        
+
     - name: Upload coverage
       uses: codecov/codecov-action@v3
 
