--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest flake8 pytest-cov autopep8  # Install autopep8
+        pip install pytest flake8 pytest-cov autopep8 requests  # Add requests here
 
     - name: Auto format with autopep8
       working-directory: ${{ matrix.service }}
