--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [api-gateway, notes-service, frontend, user-service]
+        service: [api-gateway, notes-service, frontend, auth-service]
     
     steps:
     - name: Checkout code
@@ -74,7 +74,6 @@ jobs:
       - name: Get version info
         id: version
         run: |
-          echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
           echo "SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
           echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
@@ -84,7 +83,6 @@ jobs:
           docker buildx create --use
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --tag uadeel421/pythonapplication${{ matrix.service }}:latest \
-            --tag uadeel421/pythonapplication${{ matrix.service }}:${{ env.SHA }} \
-            --tag uadeel421/pythonapplication${{ matrix.service }}:${{ env.DATE }} \
+            --tag uadeel421/pythonapplication_${{ matrix.service }}:latest \
+            --tag uadeel421/pythonapplication_${{ matrix.service }}:${{ env.SHA }} \
             --push .
