--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,6 @@ jobs:
           docker buildx create --use
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --tag uadeel421/pythonapplication_${{ matrix.service }}:latest \
-            --tag uadeel421/pythonapplication_${{ matrix.service }}:${{ env.SHA }} \
+            --tag uadeel421/pythonapplication_$:{{ matrix.service }}-latest \
+            --tag uadeel421/pythonapplication_$:{{ matrix.service }}-${{ env.SHA }} \
             --push .
