--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,6 +84,6 @@ jobs:
           docker buildx create --use
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --tag uadeel421/pythonapplication:${{ matrix.service }}-latest \
-            --tag uadeel421/pythonapplication:${{ matrix.service }}-${{ env.SHA }} \
+            --tag uadeel421/pythonapplication${{ matrix.service }}:-latest \
+            --tag uadeel421/pythonapplication${{ matrix.service }}:-${{ env.SHA }} \
             --push .
