--- a/k8stg/noteservice-deployment.yml
+++ b/k8stg/noteservice-deployment.yml
@@ -52,7 +52,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: noteservice-service
+  name: notes-service
   namespace: staging
   labels:
     app: noteservice
