--- a/k8stg/apigateway-deployment.yml
+++ b/k8stg/apigateway-deployment.yml
@@ -41,7 +41,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: apigateway-service
+  name: api-gateway
   namespace: staging
   labels:
     app: apigateway
@@ -54,4 +54,4 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
-  type: LoadBalancer       
+  type: ClusterIP      
