--- a/k8stg/configmap.yml
+++ b/k8stg/configmap.yml
@@ -4,6 +4,7 @@ metadata:
   name: configmap
   namespace: staging
 data:
-    FRONTEND_URL: http://localhost:5000
-    AUTH_SERVER_URL: http://auth-service:8001
-    NOTES_SERVER_URL: http://notes-service:8002
+    FRONTEND_URL: http://51.8.238.99/
+    API_GATEWAY_URL: http://51.8.238.99/api/
+    AUTH_SERVER_URL: http://51.8.238.99/auth/
+    NOTES_SERVER_URL: http://51.8.238.99/notes/
