--- a/k8stg/frontend-deployment.yml
+++ b/k8stg/frontend-deployment.yml
@@ -27,7 +27,10 @@ spec:
             - containerPort: 5000
           env:
             - name: BACKEND_URL
-              value: http://auth-service:8001  # 👈 service name of the api-gateway
+              valueFrom:
+                configMapKeyRef:
+                  name: configmap
+                  key: API_GATEWAY_URL
 ---
 apiVersion: v1
 kind: Service
@@ -46,4 +49,4 @@ spec:
     - protocol: TCP
       port: 5000
       targetPort: 5000
-  type: LoadBalancer
+  type: ClusterIP
