--- a/k8stg/ingress.yml
+++ b/k8stg/ingress.yml
@@ -6,33 +6,34 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: frontend-service
-                port:
-                  number: 5000
-          - path: /auth/
-            pathType: Prefix
-            backend:
-              service:
-                name: auth-service
-                port:
-                  number: 8001
-          - path: /notes/
-            pathType: Prefix
-            backend:
-              service:
-                name: notes-service
-                port:
-                  number: 8002
-          - path: /api/
-            pathType: Prefix
-            backend:
-              service:
-                name: api-gateway
-                port:
-                  number: 8000
+  - host: reliancecloud.online
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: frontend-service
+              port:
+                number: 5000
+        - path: /auth
+          pathType: Prefix
+          backend:
+            service:
+              name: auth-service
+              port:
+                number: 8001
+        - path: /notes
+          pathType: Prefix
+          backend:
+            service:
+              name: notes-service
+              port:
+                number: 8002
+        - path: /api
+          pathType: Prefix
+          backend:
+            service:
+              name: api-gateway
+              port:
+                number: 8000
