--- a/k8stg/ingress.yml
+++ b/k8stg/ingress.yml
@@ -30,7 +30,7 @@ spec:
               name: notes-service
               port:
                 number: 8002
-        - path: /api
+        - path: /api/
           pathType: Prefix
           backend:
             service:
