--- a/k8stg/app-ingress.yml
+++ b/k8stg/app-ingress.yml
@@ -1,39 +1,65 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-ingress
+  name: myapp-ingress
   namespace: staging
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Ensures SSL redirect is disabled
+    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Rewrite path to root
 spec:
   ingressClassName: nginx
   rules:
-  - host: reliancecloud.online  # Updated domain
+  - host: reliancecloud.online
     http:
       paths:
-        - path: /
+        - path: /  # This will match "/"
           pathType: Prefix
           backend:
             service:
               name: frontend-service
               port:
                 number: 5000
-        - path: /auth
+                
+        - path: /auth  # This will match "/auth" and "/auth/anything"
           pathType: Prefix
           backend:
             service:
               name: auth-service
               port:
                 number: 8001
-        - path: /notes
+        - path: /notes  # This will match "/notes" and "/notes/anything"
           pathType: Prefix
           backend:
             service:
               name: notes-service
               port:
                 number: 8002
-        - path: /api/
-          pathType: Prefix
+        - path: /api(/|$)(.*)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: api-gateway
               port:
                 number: 8000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: myapp-ingress-static
+  namespace: staging
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Ensures SSL redirect is disabled
+    nginx.ingress.kubernetes.io/rewrite-target: /static/$2  # Rewrite target for static resources
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: reliancecloud.online
+    http:
+      paths:
+        - path: /static(/|$)(.*)  # Matches "/static" and everything after it
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: frontend-service  # This can be adjusted depending on your static content's service
+              port:
+                number: 5000
