--- a/k8stg/app-ingress.yml
+++ b/k8stg/app-ingress.yml
@@ -5,7 +5,6 @@ metadata:
   namespace: staging
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Ensures SSL redirect is disabled
-    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Rewrite path to root
 spec:
   ingressClassName: nginx
   rules:
@@ -31,9 +30,9 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: notes-service
+              name: frontend-service
               port:
-                number: 8002
+                number: 5000
         - path: /api(/|$)(.*)
           pathType: ImplementationSpecific
           backend:
