--- a/kubernetes/auth-deployment.yml
+++ b/kubernetes/auth-deployment.yml
@@ -30,12 +30,12 @@ spec:
           - name: DATABASE_URL
             valueFrom:
               secretKeyRef:
-                name: secret
+                name: app-secrets
                 key: DATABASE_URL
           - name: SECRET_KEY
             valueFrom:
               secretKeyRef:
-                name: secret
+                name: app-secrets
                 key: SECRET_KEY
           volumeMounts:
             - name: mysql-ssl-cert-volume
