--- a/kubernetes/notekeeper/values.yaml
+++ b/kubernetes/notekeeper/values.yaml
@@ -22,6 +22,8 @@ apiGateway:
     repository: uadeel421/pythonapplication-api-gateway
     tag: latest
 
+nodeSelector:
+  kubernetes.azure.com/agentpool: stgpool
 
 config:
   backendUrl: "http://api-gateway:8000"
@@ -36,3 +38,7 @@ ingress:
   tlsSecretName: "reliancecloud-tls"
   clusterIssuer: letsencrypt-prod
 
+#keyvault:
+ # name: kpkeysvault
+  #tenantId: 1c127d2d-2d00-477a-b479-3104cb849681
+  
