--- a/kubernetes/notekeeper/templates/frontend-deployment.yml
+++ b/kubernetes/notekeeper/templates/frontend-deployment.yml
@@ -23,7 +23,7 @@ spec:
       containers:
         - name: frontend
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
-          imagePullPolicy: Always
+          imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
           ports:
             - containerPort: 5000
           env:
