--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,5 +116,14 @@ jobs:
 
       - name: Deploy using Helm
         run: |
-          helm upgrade --install notekeeper ./kubernetes/notekeeper --namespace staging
+            helm upgrade --install notekeeper ./kubernetes/notekeeper \
+              --namespace staging \
+              --set frontend.image.tag=${{ env.SHA }} \
+              --set auth.image.tag=${{ env.SHA }} \
+              --set notesService.image.tag=${{ env.SHA }} \
+              --set apiGateway.image.tag=${{ env.SHA }} \
+              --set frontend.image.pullPolicy=Always \
+              --set auth.image.pullPolicy=Always \
+              --set notesService.image.pullPolicy=Always \
+              --set apiGateway.image.pullPolicy=Always
 
