--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,10 +118,10 @@ jobs:
         run: |
             helm upgrade --install notekeeper ./kubernetes/notekeeper \
               --namespace staging \
-              --set frontend.image.tag=${{ env.SHA }} \
-              --set auth.image.tag=${{ env.SHA }} \
-              --set notesService.image.tag=${{ env.SHA }} \
-              --set apiGateway.image.tag=${{ env.SHA }} \
+              --set frontend.image.tag=latest \
+              --set auth.image.tag=latest \
+              --set notesService.image.tag=latest \
+              --set apiGateway.image.tag=latest \
               --set frontend.image.pullPolicy=Always \
               --set auth.image.pullPolicy=Always \
               --set notesService.image.pullPolicy=Always \
