--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,14 +117,5 @@ jobs:
       - name: Deploy using Helm
         run: |
             helm upgrade --install notekeeper ./kubernetes/notekeeper \
-              --namespace staging \
-              --set frontend.image.tag=latest \
-              --set auth.image.tag=latest \
-              --set notesService.image.tag=latest \
-              --set apiGateway.image.tag=latest \
-              --set frontend.image.tag=${{ env.SHA }} \
-              --set auth.image.tag=${{ env.SHA }} \
-              --set notesService.image.tag=${{ env.SHA }} \
-              --set apiGateway.image.tag=${{ env.SHA }} \
-
+              --namespace staging 
 
