--- a/kubernetes/notekeeper/templates/secretproviderclass.yaml
+++ b/kubernetes/notekeeper/templates/secretproviderclass.yaml
@@ -2,19 +2,12 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: azure-keyvault-secrets
-  namespace: {{ .Values.namespace }} 
+  namespace: {{ .Values.namespace }}
 spec:
   provider: azure
-  secretObjects:
-    - secretName: app-secrets
-      type: Opaque
-      data:
-        - objectName: DATABASE-URL
-          key: DATABASE_URL
-        - objectName: SECRET-KEY
-          key: SECRET_KEY
   parameters:
-    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: "bfd1e328-7919-4d44-8bb0-ac8f42a44b70"
     keyvaultName: "{{ .Values.keyvault.name }}"
     objects: |
       array:
@@ -24,4 +17,7 @@ spec:
         - |
           objectName: SECRET-KEY
           objectType: secret
+        - |
+          objectName: SSL-CERT-V2
+          objectType: cert
     tenantId: "{{ .Values.keyvault.tenantId }}"
