--- a/kubernetes/notekeeper/cluster-issuer.yaml
+++ b/kubernetes/notekeeper/cluster-issuer.yaml
@@ -1,10 +1,10 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
+  name: letsencrypt-staging
 spec:
   acme:
-    email: mua.bht@gmail.com   # 👈 Change this to your real email
+    email: mua.bht@gmail.com   # 👈 Authentication via email
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-prod
