--- a/kubernetes/notekeeper/templates/auth-deployment.yml
+++ b/kubernetes/notekeeper/templates/auth-deployment.yml
@@ -26,21 +26,20 @@ spec:
           imagePullPolicy: {{ .Values.auth.image.pullPolicy }}
           ports:
             - containerPort: 8001
-          envFrom:
-            - secretRef:
-                name: app-secrets
-
+          #envFrom:
+            #- secretRef:
+             #   name: app-secrets
           volumeMounts:
-            - name: mysql-ssl-cert-volume
-              mountPath: /app/ssl
+            - name: secrets-store-inline
+              mountPath: /mnt/secrets-store
               readOnly: true      
       volumes:
-        - name: mysql-ssl-cert-volume
-          secret:
-            secretName: mysql-ssl-cert # Name of the secret containing the certificate
-            items:
-              - key: DigiCertGlobalRootCA.crt.pem
-                path: DigiCertGlobalRootCA.crt.pem          
+          - name: secrets-store-inline
+            csi:
+              driver: secrets-store.csi.k8s.io
+              readOnly: true
+              volumeAttributes:
+                secretProviderClass: azure-keyvault-secrets       
         
             
 ---
