--- a/kubernetes/notekeeper/templates/secretproviderclass.yml
+++ b/kubernetes/notekeeper/templates/secretproviderclass.yml
@@ -18,6 +18,6 @@ spec:
           objectName: SECRET-KEY
           objectType: secret
         - |
-          objectName: SSL-CERT-V2
-          objectType: cert
+          objectName: SSL-CERT
+          objectType: secret
     tenantId: "{{ .Values.keyvault.tenantId }}"
