--- a/kubernetes/notekeeper/templates/secretproviderclass.yml
+++ b/kubernetes/notekeeper/templates/secretproviderclass.yml
@@ -12,7 +12,7 @@ spec:
     objects: |
       array:
         - |
-          objectName: DATABASE-URL
+          objectName: Database-URL
           objectType: secret
         - |
           objectName: SECRET-KEY
