--- a/kubernetes/notekeeper/cluster-issuer.yaml
+++ b/kubernetes/notekeeper/cluster-issuer.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-staging
+  name: letsencrypt-stg
 spec:
   acme:
-    email: mua.bht@gmail.com   # 👈 Authentication via email
     server: https://acme-v02.api.letsencrypt.org/directory
+    email: mua.bht@gmail.com
     privateKeySecretRef:
-      name: letsencrypt-prod
+      name: letsencrypt-prod-key
     solvers:
     - http01:
         ingress:
