--- a/kubernetes/notekeeper/templates/ingress.yaml
+++ b/kubernetes/notekeeper/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: "{{ .Release.Name }}-ingress"
   namespace: {{ .Values.namespace }}
   annotations:
     kubernetes.io/ingress.class: {{ .Values.ingress.className }}
